--- a/website/php/tweedepagina.html
+++ b/website/php/tweedepagina.html
@@ -3,25 +3,25 @@
 
 <head>
 	<title> Wachtwoord vergeten!</title>
-	<link rel="stylesheet" type="text/css" href="CMScss.css">
+	<link rel="stylesheet" type="text/css" href="../css/CMScss.css">
 </head>
 
 <body>
 	<div class="loginplekbg">
 		<h1 class="h1">wachtwoord vergeten</h1>
-	
+
 	<div>
 		<form>
-			
+
   			<input class="knoppen" type="email" placeholder="email" name="email" required>
   				<br />
-  		
+
  			<input class="loginknop " type="submit"  value ="send">
  			<input class="loginknop" type="button" onclick="location.href='./index.html';" value="login" />
 
 		</form>
 
-		
+
 	</div>
 </div>
 
