--- a/website/php/register.html
+++ b/website/php/register.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Register</title>
-      <link rel="stylesheet" href="CMScss.css">
+      <link rel="stylesheet" type="text/css" href="../css/CMScss.css">
   </head>
     <body>
       <div class="registerplek">
@@ -25,6 +25,6 @@
               </form>
             </div>
           </div>
-        
+
         </body>
       </html>
