--- a/website/php/tweedepagina.html
+++ b/website/php/tweedepagina.html
@@ -4,6 +4,7 @@
 <head>
 	<title> Wachtwoord vergeten!</title>
 	<link rel="stylesheet" type="text/css" href="../css/CMScss.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
