--- a/website/php/register.html
+++ b/website/php/register.html
@@ -3,6 +3,7 @@
   <head>
     <title>Register</title>
       <link rel="stylesheet" type="text/css" href="../css/CMScss.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
     <body>
       <div class="registerplek">
