Bestanden voor de blog

--- a/website/php/blog-index.html
+++ b/website/php/blog-index.html
@@ -21,10 +21,10 @@
 				</div>
 				<div class="cato">
 					<ul>
-						Renko 		<br>
-						Stan		<br>
-						Simon		<br>
-						Jonathan	<br>
+						<a href="cat1.php">Simon</a>  		<br>	
+						<a href="cat2.php">Stan</a> 		<br>
+						<a href="cat3.php">Renko</a> 		<br>
+						<a href="cat4.php">Jonathan</a> 	<br>
 					</ul>
 				</div>
 				
