--- a/website/php/tweedepagina.html
+++ b/website/php/tweedepagina.html
@@ -4,19 +4,16 @@
 <head>
 	<title> Wachtwoord vergeten!</title>
 	<link rel="stylesheet" type="text/css" href="../css/CMScss.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 	<div class="loginplekbg">
 		<h1 class="h1">wachtwoord vergeten</h1>
-
 	<div>
 		<form>
 
-  			<input class="knoppen" type="email" placeholder="email" name="email" required>
+  			<input type="email" placeholder="email" name="email" required>
   				<br />
-
  			<input class="loginknop " type="submit"  value ="send">
  			<input class="loginknop" type="button" onclick="location.href='./index.html';" value="login" />
 
@@ -26,7 +23,10 @@
 	</div>
 </div>
 
+<?php 
 
+
+?>
 
 </body>
 </html>
