--- a/website/php/index.html
+++ b/website/php/index.html
@@ -3,49 +3,39 @@
 
 <head>
 		<link rel="stylesheet" type="text/css" href="../css/CMScss.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
 			DreamTeam
 		</title>
 </head>
 
 <body>
-
-
-
  	<div class="loginplekbg">
- 		<h1 class="h1">login</h1>
+ 				<h1 class="h1">login</h1>
 
- 		<!--login formulier-->
- 		<form action="/action_page.php">
+ 						<!--login formulier-->
+ 						<form action="/action_page.php">
 
-  			<input class="knoppen" type="text" placeholder="username" name="username" required >
-  				<br>
-  			<input class="knoppen" type="password" placeholder="password" name="password" required>
-  				<br />
-
- 			<input class="loginknop  " type="submit"  value ="login">
- 			<br / ><br / >
-
-
-		</form>
-
-		<br>
-		<br>
+  								<input class="jformulier" type="text" placeholder="username" name="username" required >
+  								<br>
+  								<input class="jformulier" type="password" placeholder="password" name="password" required>
+  								<br />
+ 								<input class="loginknop  " type="submit"  value ="login">
+ 								<br / ><br / >
 
 
+						</form>
+						<br>
+						<br>
+						<!--link naar registreren en naar wachtwoord vergeten -->
 		<div>
 
-		<a class="massage" href="register.html">Register</a>
-
-		<br>
-
-		<a class="massage" href="tweedepagina.html">forgot password?</a>
+				<a class="massage" href="register.html">Register</a>
+				<br>
+				<a class="massage" href="tweedepagina.html">forgot password?</a>
 		</div>
-		<!--login formulier-->
 
 
- </div>
+	</div>
 
 </body>
 
