Updated CSS en html van de blog

--- a/website/php/blog-index.html
+++ b/website/php/blog-index.html
@@ -20,11 +20,11 @@
 					<h1>Blog</h1>
 				</div>
 				<div class="cato">
-					<ul>
-						<a href="cat1.php">Simon</a>  		<br>	
-						<a href="cat2.php">Stan</a> 		<br>
-						<a href="cat3.php">Renko</a> 		<br>
-						<a href="cat4.php">Jonathan</a> 	<br>
+					<ul class="names">
+						<li> <button class="button"> <a class="names" href="cat/cat1.php">Simon</a></li>	 </button>  	    	
+						<li> <button class="button"> <a class="names" href="cat/cat2.php">Stan</a></li>      </button>	    
+						<li> <button class="button"> <a class="names" href="cat/cat3.php">Renko</a></li> 	 </button>
+						<li> <button class="button"> <a class="names" href="cat/cat4.php">Jonathan</a></li>  </button>	
 					</ul>
 				</div>
 				
