--- a/website/php/index.html
+++ b/website/php/index.html
@@ -15,9 +15,9 @@
  						<!--login formulier-->
  						<form action="/action_page.php">
 
-  								<input class="jformulier" type="text" placeholder="username" name="username" required >
+  								<input class="formulierusername" type="text" placeholder="username" name="username" required >
   								<br>
-  								<input class="jformulier" type="password" placeholder="password" name="password" required>
+  								<input class="formulierwachtwoord" type="password" placeholder="password" name="password" required>
   								<br />
  								<input class="loginknop  " type="submit"  value ="login">
  								<br / ><br / >
