--- a/website/php/tweedepagina.html
+++ b/website/php/tweedepagina.html
@@ -12,7 +12,7 @@
 	<div>
 		<form>
 
-  			<input class="jformulier" type="email" placeholder="email" name="email" required>
+  			<input class="formulieremail" type="email" placeholder="email" name="email" required>
   				<br />
  			<input class="loginknop " type="submit"  value ="send">
  			<input class="loginknop" type="button" onclick="location.href='./index.html';" value="login" />
