--- a/website/php/blog-index.html
+++ b/website/php/blog-index.html
@@ -16,15 +16,19 @@
 	</header>
 	<section class="container">
 
-				<div  class="blog">
+				<div class="blog">
 					<h1>Blog</h1>
 				</div>
+				<div class="blog">
+					<h1>Test</h1>
+				</div>
 				<div class="cato">
-					<ul class="names">
-						<li> <button class="button"> <a class="names" href="cat/cat1.php">Simon</a></li>	 </button>  	    	
-						<li> <button class="button"> <a class="names" href="cat/cat2.php">Stan</a></li>      </button>	    
-						<li> <button class="button"> <a class="names" href="cat/cat3.php">Renko</a></li> 	 </button>
-						<li> <button class="button"> <a class="names" href="cat/cat4.php">Jonathan</a></li>  </button>	
+					<ul class="ul">
+						<li> <a class="names button" href="cat/cat1.php">Simon</a> </li>	 	    	
+						<li> <a class="names button" href="cat/cat2.php">Stan</a> </button> </li>     	    
+						<li> <a class="names button" href="cat/cat3.php">Renko</a> </button> </li> 	 
+						<li> <a class="names button" href="cat/cat4.php">Jonathan</a>  </button>	 </li>
+						<li> <a class="names button" href="cat/cat4.php">Stefan</a>  </button> </li> 
 					</ul>
 				</div>
 				
