--- a/website/Stefan site/index.html
+++ b/website/Stefan site/index.html
@@ -21,10 +21,10 @@
 
 <div>
       <p>
-        <a href="#" class="logout logoutHov"> 
+        <a href="../php/index.html" class="logout logoutHov"> 
            Log out
         </a>
-      </p> 
+      </p>
     </div>
 
     <div class="in1">
