--- a/website/php/nieuweww.html
+++ b/website/php/nieuweww.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>new password</title>
-	<link rel="stylesheet" type="text/css" href="CMScss.css">
+	<link rel="stylesheet" type="text/css" href="../CMScss.css">
 </head>
 <body>
 
