--- a/website/php/blog-index.html
+++ b/website/php/blog-index.html
@@ -24,11 +24,11 @@
 				</div>
 				<div class="cato">
 					<ul class="ul">
-						<li> <a class="names button" href="cat/cat1.php">Simon</a> </li>	 	    	
-						<li> <a class="names button" href="cat/cat2.php">Stan</a> </button> </li>     	    
-						<li> <a class="names button" href="cat/cat3.php">Renko</a> </button> </li> 	 
-						<li> <a class="names button" href="cat/cat4.php">Jonathan</a>  </button>	 </li>
-						<li> <a class="names button" href="cat/cat4.php">Stefan</a>  </button> </li> 
+						<li> <a class="names button" href="cat/cat1.php">Simon</a> </li> <br>	 	    	
+						<li> <a class="names button" href="cat/cat2.php">Stan</a> </button> </li> <br>     	    
+						<li> <a class="names button" href="cat/cat3.php">Renko</a> </button> </li> <br> 	 
+						<li> <a class="names button" href="cat/cat4.php">Jonathan</a>  </button>	 </li> <br>
+						<li> <a class="names button" href="cat/cat4.php">Stefan</a>  </button> </li> <br>
 					</ul>
 				</div>
 				
