--- a/website/php/blog-index.html
+++ b/website/php/blog-index.html
@@ -11,18 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/blog.css">
 </head>
 <body>
-	<header>
-		<p>Welkom op het blog</p>
-	</header>
 	<section class="container">
 
-				<div class="blog">
-					<h1>Blog</h1>
+		<header><div class="cato">
+					<h1>Blog</h1></header>
 				</div>
-				<div class="blog">
-					<h1>Test</h1>
-				</div>
-				<div class="cato">
+				<div >
 					<ul class="ul">
 						<li> <a class="names button" href="cat/cat1.php">Simon</a> </li> <br>	 	    	
 						<li> <a class="names button" href="cat/cat2.php">Stan</a> </button> </li> <br>     	    
